--- a/app/app.css
+++ b/app/app.css
@@ -1,15 +1,357 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
-@theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+@custom-variant dark (&:is(.dark *));
+
+/* Bellefair Regular */
+@font-face {
+  font-family: "Bellefair"; /* The name you'll use in CSS */
+  src: url("./assets/fonts/Bellefair/Bellefair-Regular.ttf") format("truetype"); /* Relative path from this CSS file */
+  font-weight: 400; /* Regular weight */
+  font-style: normal;
+  font-display: swap; /* Tells the browser how to handle font loading (prevents invisible text) */
 }
 
-html,
-body {
-  @apply bg-white dark:bg-gray-950;
+/* Barlow Regular */
+@font-face {
+  font-family: "Barlow"; /* The name you'll use in CSS */
+  src: url("./assets/fonts/Barlow/Barlow-Regular.ttf") format("truetype");
+  font-weight: 400; /* Regular weight */
+  font-style: normal;
+  font-display: swap;
+}
 
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
+/* Barlow Condensed Regular */
+@font-face {
+  font-family: "Barlow Condensed"; /* The name you'll use in CSS */
+  src: url("./assets/fonts/Barlow_Condensed/BarlowCondensed-Regular.ttf")
+    format("truetype");
+  font-weight: 400; /* Regular weight */
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Barlow Condensed"; /* The name you'll use in CSS */
+  src: url("./assets/fonts/Barlow_Condensed/BarlowCondensed-Bold.ttf")
+    format("truetype");
+  font-weight: 700; /* Regular weight */
+  font-style: normal;
+  font-display: swap;
+}
+
+@theme {
+  --breakpoint-tablet: 48em;
+  --breakpoint-desktop: 90em;
+
+  --color-blue-300: #d0d6f9;
+  --color-blue-900: #0b0d17;
+
+  --spacing-1600: 8rem;
+  --spacing-1200: 6rem;
+  --spacing-1000: 5rem;
+  --spacing-800: 4rem;
+  --spacing-600: 3rem;
+  --spacing-500: 2.5rem;
+  --spacing-400: 2rem;
+  --spacing-300: 1.5rem;
+  --spacing-200: 1rem;
+  --spacing-150: 0.75rem;
+  --spacing-100: 0.5rem;
+  --spacing-50: 0.25rem;
+  --spacing-25: 0.125rem;
+
+  --spacing-navbar-mobile: 5.5rem;
+  --spacing-navbar-tablet: 6rem;
+  --spacing-navbar-desktop: 8.5rem;
+
+  --bg-home-mobile: url("./assets/home/background-home-mobile.jpg");
+  --bg-home-tablet: url("./assets/home/background-home-tablet.jpg");
+  --bg-home-desktop: url("./assets/home/background-home-desktop.jpg");
+
+  --bg-destination-mobile: url("./assets/destination/background-destination-mobile.jpg");
+  --bg-destination-tablet: url("./assets/destination/background-destination-tablet.jpg");
+  --bg-destination-desktop: url("./assets/destination/background-destination-desktop.jpg");
+
+  --bg-crew-mobile: url("./assets/crew/background-crew-mobile.jpg");
+  --bg-crew-tablet: url("./assets/crew/background-crew-tablet.jpg");
+  --bg-crew-desktop: url("./assets/crew/background-crew-desktop.jpg");
+
+  --bg-technology-mobile: url("./assets/technology/background-technology-mobile.jpg");
+  --bg-technology-tablet: url("./assets/technology/background-technology-tablet.jpg");
+  --bg-technology-desktop: url("./assets/technology/background-technology-desktop.jpg");
+}
+
+:root {
+  --font-bellefair: "Bellefair", serif;
+  --font-barlow: "Barlow", sans-serif;
+  --font-barlow-condensed: "Barlow Condensed", sans-serif;
+  --radius: 0.625rem;
+  --background: oklch(1 0 0);
+  --foreground: oklch(0.145 0 0);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.145 0 0);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.145 0 0);
+  --primary: oklch(0.205 0 0);
+  --primary-foreground: oklch(0.985 0 0);
+  --secondary: oklch(0.97 0 0);
+  --secondary-foreground: oklch(0.205 0 0);
+  --muted: oklch(0.97 0 0);
+  --muted-foreground: oklch(0.556 0 0);
+  --accent: oklch(0.97 0 0);
+  --accent-foreground: oklch(0.205 0 0);
+  --destructive: oklch(0.577 0.245 27.325);
+  --border: oklch(0.922 0 0);
+  --input: oklch(0.922 0 0);
+  --ring: oklch(0.708 0 0);
+  --chart-1: oklch(0.646 0.222 41.116);
+  --chart-2: oklch(0.6 0.118 184.704);
+  --chart-3: oklch(0.398 0.07 227.392);
+  --chart-4: oklch(0.828 0.189 84.429);
+  --chart-5: oklch(0.769 0.188 70.08);
+  --sidebar: oklch(0.985 0 0);
+  --sidebar-foreground: oklch(0.145 0 0);
+  --sidebar-primary: oklch(0.205 0 0);
+  --sidebar-primary-foreground: oklch(0.985 0 0);
+  --sidebar-accent: oklch(0.97 0 0);
+  --sidebar-accent-foreground: oklch(0.205 0 0);
+  --sidebar-border: oklch(0.922 0 0);
+  --sidebar-ring: oklch(0.708 0 0);
+}
+
+@utility text-preset-1-mobile {
+  font-family: var(--font-bellefair);
+  font-size: 5rem;
+  line-height: normal;
+  letter-spacing: normal;
+}
+
+@utility text-preset-2-mobile {
+  font-family: var(--font-bellefair);
+  font-size: 3.5rem;
+  line-height: normal;
+  letter-spacing: normal;
+}
+
+@utility text-preset-3-mobile {
+  font-family: var(--font-bellefair);
+  font-size: 1.5rem;
+  line-height: normal;
+  letter-spacing: normal;
+}
+
+@utility text-preset-4-mobile {
+  font-family: var(--font-bellefair);
+  font-size: 1.125rem;
+  line-height: normal;
+  letter-spacing: normal;
+}
+
+@utility text-preset-6-mobile {
+  font-family: var(--font-barlow-condensed);
+  font-size: 1rem;
+  line-height: normal;
+  letter-spacing: 15%;
+}
+
+@utility text-preset-8-mobile {
+  font-family: var(--font-barlow-condensed);
+  font-size: 0.875rem;
+  line-height: normal;
+  letter-spacing: 15%;
+}
+
+@utility text-preset-9-mobile {
+  font-family: var(--font-barlow);
+  font-size: 0.9375rem;
+  line-height: 180%;
+  letter-spacing: normal;
+}
+
+@utility text-preset-2-tablet {
+  font-family: var(--font-bellefair);
+  font-size: 5rem;
+  line-height: normal;
+  letter-spacing: normal;
+}
+
+@utility text-preset-3-tablet {
+  font-family: var(--font-bellefair);
+  font-size: 2.5rem;
+  line-height: normal;
+  letter-spacing: normal;
+}
+
+@utility text-preset-4-tablet {
+  font-family: var(--font-bellefair);
+  font-size: 1.5rem;
+  line-height: normal;
+  letter-spacing: normal;
+}
+
+@utility text-preset-5-tablet {
+  font-family: var(--font-barlow-condensed);
+  font-size: 1.25rem;
+  line-height: normal;
+  letter-spacing: 15%;
+}
+
+@utility text-preset-9-tablet {
+  font-family: var(--font-barlow);
+  font-size: 1rem;
+  line-height: 180%;
+  letter-spacing: normal;
+}
+
+@utility text-preset-1-desktop {
+  font-family: var(--font-bellefair);
+  font-size: 9rem;
+  line-height: normal;
+  letter-spacing: normal;
+}
+
+@utility text-preset-2-desktop {
+  font-family: var(--font-bellefair);
+  font-size: 6rem;
+  line-height: normal;
+  letter-spacing: normal;
+}
+
+@utility text-preset-3-desktop {
+  font-family: var(--font-bellefair);
+  font-size: 3.5rem;
+  line-height: normal;
+  letter-spacing: normal;
+}
+
+@utility text-preset-4-desktop {
+  font-family: var(--font-bellefair);
+  font-size: 2rem;
+  line-height: normal;
+  letter-spacing: normal;
+}
+
+@utility text-preset-5-desktop {
+  font-family: var(--font-barlow-condensed);
+  font-size: 1.75rem;
+  line-height: normal;
+  letter-spacing: 4px;
+}
+
+@utility text-preset-6-desktop {
+  font-family: var(--font-barlow-condensed);
+  font-size: 1.75rem;
+  line-height: normal;
+  letter-spacing: normal;
+}
+
+@utility text-preset-7-desktop {
+  font-family: var(--font-barlow-condensed);
+  font-size: 0.875rem;
+  line-height: normal;
+  letter-spacing: 2px;
+}
+
+@utility text-preset-8-desktop {
+  font-family: var(--font-barlow-condensed);
+  font-size: 1rem;
+  line-height: normal;
+  letter-spacing: 2px;
+}
+
+@utility text-preset-8-bold-desktop {
+  font-family: var(--font-barlow-condensed);
+  font-size: 1rem;
+  line-height: normal;
+  font-weight: 700;
+  letter-spacing: 2.7px;
+}
+
+@utility text-preset-9-desktop {
+  font-family: var(--font-barlow);
+  font-size: 1.125rem;
+  line-height: 180%;
+  letter-spacing: normal;
+}
+
+@theme inline {
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
+}
+
+.dark {
+  --background: oklch(0.145 0 0);
+  --foreground: oklch(0.985 0 0);
+  --card: oklch(0.205 0 0);
+  --card-foreground: oklch(0.985 0 0);
+  --popover: oklch(0.205 0 0);
+  --popover-foreground: oklch(0.985 0 0);
+  --primary: oklch(0.922 0 0);
+  --primary-foreground: oklch(0.205 0 0);
+  --secondary: oklch(0.269 0 0);
+  --secondary-foreground: oklch(0.985 0 0);
+  --muted: oklch(0.269 0 0);
+  --muted-foreground: oklch(0.708 0 0);
+  --accent: oklch(0.269 0 0);
+  --accent-foreground: oklch(0.985 0 0);
+  --destructive: oklch(0.704 0.191 22.216);
+  --border: oklch(1 0 0 / 10%);
+  --input: oklch(1 0 0 / 15%);
+  --ring: oklch(0.556 0 0);
+  --chart-1: oklch(0.488 0.243 264.376);
+  --chart-2: oklch(0.696 0.17 162.48);
+  --chart-3: oklch(0.769 0.188 70.08);
+  --chart-4: oklch(0.627 0.265 303.9);
+  --chart-5: oklch(0.645 0.246 16.439);
+  --sidebar: oklch(0.205 0 0);
+  --sidebar-foreground: oklch(0.985 0 0);
+  --sidebar-primary: oklch(0.488 0.243 264.376);
+  --sidebar-primary-foreground: oklch(0.985 0 0);
+  --sidebar-accent: oklch(0.269 0 0);
+  --sidebar-accent-foreground: oklch(0.985 0 0);
+  --sidebar-border: oklch(1 0 0 / 10%);
+  --sidebar-ring: oklch(0.556 0 0);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
   }
 }
